--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/nick
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql= true
+
+api.security.token.secret=123456
