feat: criando lógica do chat bot

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql= true
 
-api.security.token.secret=123456
+api.nick.token.secret=${JWT_SECRET:my-secret-key}
