--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -55,6 +55,12 @@
 			<artifactId>java-jwt</artifactId>
 			<version>4.4.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/nz.ac.waikato.cms.weka/weka-dev -->
+		<dependency>
+			<groupId>nz.ac.waikato.cms.weka</groupId>
+			<artifactId>weka-dev</artifactId>
+			<version>3.9.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
