--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "angular-notifier": "^14.0.0",
+    "bootstrap-icons": "^1.11.1",
     "platform-browser": "^0.0.1-security",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
